Add services to manifest

--- a/TodoApi/ci/manifest.yml
+++ b/TodoApi/ci/manifest.yml
@@ -3,3 +3,5 @@ applications:
 - name: todo 
   host: todo-semipathologic-meaningness
   buildpack: https://github.com/cloudfoundry/dotnet-core-buildpack.git
+  services:
+  - todo-mysql
